Changelog
=========


1.14.1 (unreleased)
-------------------

- Plone 5: use registry instead of properties. [jone]


1.14.0 (2019-12-05)
-------------------

- Fix german translation [Nachtalb]
- New styling for news_listing view [jone, tinagerber]


1.13.1 (2019-09-12)
-------------------

- Fix news folder not shown in navigation (plone5) [Nachtalb]
- Remove src checkouts of plone5 branches of in the meantime released packages [Nachtalb]
- Add missing document description in news_listing view [Nachtalb]


1.13.0 (2019-09-12)
-------------------

- Be able to add custom "more items" link for NewsListingBlocks. [tinagerber]


1.12.0 (2019-08-29)
-------------------

- Remove obsolete source checkouts [Nachtalb]
- Add customizable title to archive portlet [Nachtalb]


1.11.2 (2019-03-29)
-------------------

- Bugfix: Adapt flaky test to not check list order [busykoala]
- Bugfix: Add IS_PLONE_5 implementation independent of ftw.testing [busykoala]


1.11.1 (2019-03-22)
-------------------

- Bugfix: Add missing comma in setup.py [busykoala]



1.11.0 (2019-03-22)
-------------------

- Move ressources to plone bundle and adapt tests for plone 5.1 (especially
  an adaption in xml parsing) [busykoala]


1.10.2 (2018-08-22)
-------------------

- Swap the NewsListingBlock default view from "block_view" to "@@redirect_to_parent" [Nachtalb]


1.10.1 (2017-12-19)
-------------------

- Bugfix of the option to hide emtpy news listing block introduced
  in 1.10.0. [mbaechtold]


1.10.0 (2017-10-12)
-------------------

- Update RSS to version 2.0 in news_listing_rss view [raphael-s]

- Add option to hide emtpy news listing block. [mbaechtold]

- Use "ftw.referencewidget" as the widget for selecting the paths used
  to filter the news items. [mbaechtold]


1.9.0 (2017-08-08)
------------------

- Move base test classes to own module. [mbaechtold]


1.8.3 (2017-03-30)
------------------

- Fix a bug which prevented inactive news from being shown in combination