@@ -14,3 +14,4 @@ parts/
 src/
 var/
 /README.html
+/node_modules/
