@@ -1,0 +1,8 @@
+({
+    baseUrl: "./ftw/news/browser/resources",
+    paths: {
+        jquery: "empty:",
+    },
+    name: "main",
+    out: "./ftw/news/browser/resources/news-compiled.js"
+})
