@@ -1,0 +1,5 @@
+({
+    optimizeCss: "standard",
+    cssIn: "./ftw/news/browser/resources/main.css",
+    out: "./ftw/news/browser/resources/news-compiled.css"
+})
