@@ -1,0 +1,1 @@
+@import url('news.css');
