@@ -1,0 +1,1 @@
+.newsListing,.ftw-news-newslistingblock .newsListing{list-style:none;padding-left:0;margin:0;}.newsListing .image,.ftw-news-newslistingblock .newsListing .image{float:right;margin-left:1em;}.newsListing .tileItem,.ftw-news-newslistingblock .newsListing .tileItem{border-bottom:1px solid #b7b5b4;margin-bottom:1em;}.newsListing .tileItem .tileHeadline,.newsListing .tileItem .newsHeadline,.ftw-news-newslistingblock .newsListing .tileItem .tileHeadline,.ftw-news-newslistingblock .newsListing .tileItem .newsHeadline{font-size:24px;}.portletArchiveListing .highlight a{font-weight:bold;}.portletArchiveListing li.year{cursor:pointer;}.portletArchiveListing li{display:block;margin-bottom:2px;}.portletArchiveListing ul.months{display:none;margin-bottom:10px;margin-top:5px;}.portletArchiveListing li.month{padding-left:2em;}.portletArchiveListing li.year span.yearnumber:before{content:'►';padding-right:5px;}.portletArchiveListing li.year.expanded span.yearnumber:before{content:'▼';}.portletArchiveListing ul.years ul.expanded{display:block;}.portlet.newsTemplate ul{list-style:none;padding-left:0;margin:0;}.portlet.newsTemplate ul .portletItem{padding-bottom:1em;margin-bottom:1em;border-bottom:1px solid #b7b5b4;}.portlet.newsTemplate ul .newsText .portletItemDate{font-weight:bold;}.portlet.newsTemplate ul .newsText .portletItemTitle{font-size:18px;}.portlet.newsTemplate ul .newsText .image img{width:100%;height:auto;}
