@@ -1,0 +1,23 @@
+<registry>
+
+    <records prefix="plone.resources/ftw-news-styles"
+             interface='Products.CMFPlone.interfaces.IResourceRegistry'
+             remove="True"/>
+    <records prefix="plone.resources/ftw-news-js"
+             interface='Products.CMFPlone.interfaces.IResourceRegistry'
+             remove="True"/>
+
+    <records prefix="plone.bundles/ftw-news-resources"
+             interface='Products.CMFPlone.interfaces.IBundleRegistry'>
+        <value key="resources" purge="True"></value>
+        <value key="enabled">True</value>
+        <value key="depends">plone</value>
+        <value key="stub_js_modules">jquery</value>
+        <value key="compile">False</value>
+        <value key="jscompilation">++resource++ftw.news.resources/news-compiled.js</value>
+        <value key="csscompilation">++resource++ftw.news.resources/news-compiled.css</value>
+        <value key="last_compilation">2019-12-11 16:00:00</value>
+        <value key="merge_with">default</value>
+    </records>
+
+</registry>
